# yubikey-minidriver-tool

./: CMakeLists.txt  README.adoc
src/: CMakeLists.txt  cng.cpp  cng.hpp  format.hpp  md.cpp  md.hpp  tool.cpp  unique.hpp
